navbar layout shifting fixed

--- a/client/index.css
+++ b/client/index.css
@@ -1,15 +1,10 @@
 /* Put your CSS in here! */
 .icon-button:hover {
- 
- font-size: xx-large;
-  padding: 3px;
-  border-radius: 100%;
+  transform: scale(1.3);
 }
+
 .button:hover {
- 
-  font-size: x-large;
-   padding: 3px;
-  
+  font-size: x-large; 
  }
 
 .button:active {
